--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Weather App</h1>
+        <h1>Weather App BCT</h1>
         <p>developed by Inderjeet Singh</p>
         <form method="POST">
             <input type="text" name="city" placeholder="Enter city name" required>
